# desert

./: AGENTS.md  Cargo.toml  README.md  guidelines.md  handoff.md  overview.md  plan.md
docs/: dev.md  user.md
examples/: ai_interop.ds  borrows.ds  collections.ds  data_processing.ds  dict_set_literals.ds  enums.ds  error_handling.ds  hello_world.ds  imports.ds  imports_libraries.ds  lambdas.ds  linked_list.ds  match_option.ds  math.ds  mutable_pipeline.ds  neural_network.ds  oop.ds  operator_precedence.ds  print_format_edges.ds  shape_protocol.ds  struct_constructors.ds  tuples_and_ranges.ds
examples/util/: library_math.ds  metrics.ds
src/: ast.rs  formatter.rs  imports.rs  lexer.rs  main.rs  mirage.rs  parser.rs  resolver.rs  sourcemap.rs  transpiler.rs
tests/: check_examples.rs
tests/fixtures/: check_fail_assign_non_place.ds  check_fail_assign_requires_mut.ds  check_fail_break_outside_loop.ds  check_fail_call_arity_generic.ds  check_fail_call_arity_local_forward.ds  check_fail_call_arity_top_level.ds  check_fail_constructor_duplicate_field.ds  check_fail_constructor_generic_args.ds  check_fail_constructor_missing_fields.ds  check_fail_constructor_too_many_positional.ds  check_fail_constructor_unknown_field.ds  check_fail_continue_outside_loop.ds  check_fail_duplicate_local_binding.ds  check_fail_duplicate_local_def.ds  check_fail_duplicate_params.ds  check_fail_duplicate_top_level_def.ds  check_fail_file_from_import_alias_unsupported.ds  check_fail_file_from_import_missing_target.ds  check_fail_file_import_alias_unsupported.ds  check_fail_lex_unknown_token.ds  (+52 more)
(+15 files in other folders)
